[package]
name = "hybrid_control_car"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "hybrid_control_car"
crate-type = ["cdylib"]

[dependencies]
rapier3d = { version = "0.22.0", features = [ "simd-stable"] }
pyo3 = "0.22.0"
