[package]
name = "hybrid_control_car"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "hybrid_control_car"
crate-type = ["cdylib"]

[dependencies]
libm = "0.2.8"
rapier3d-f64 = { version = "0.22.0" }
pyo3 = "0.22.0"
